--- a/resources/css/bootstrap.css
+++ b/resources/css/bootstrap.css
@@ -1,11 +1,10 @@
 .logo-navbar {
-    height: 80px;
+    width: 5rem;
     transition: linear .3s;
+    position: relative;
+    left: 2rem;
 }
 
-.logo-navbar:hover{
-    transform: scale(1.075);
-}
 
 .bg-white {
     background-color: white;
@@ -26,4 +25,15 @@
 
 #navbarNav {
     padding-right: 2rem;
+}
+
+.carousel{
+    width: 70%; /*width you want*/
+    height: 20rem; /*height you want*/
+    overflow: hidden;
+}
+.carousel-item img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
