--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -13,15 +13,19 @@ header h1 {
     font-weight: bold;
 }
 
-header h1, h3 {
+header img {
+    height: 10rem;
+}
+
+header h1, h3, img {
     position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 30%;
     color: white;
+    padding-bottom: 1rem;
 }
 
 .container {
-    margin: 2rem 3rem 2rem 3rem;
+    margin: 2rem 0 2rem 10%;
 }
 
 .anim {
@@ -30,4 +34,86 @@ header h1, h3 {
 
 .anim .nav-link {
     color: white !important;
+}
+
+.one {
+    width: 50%;
+    float: left;
+    padding-left: 20%;
+}
+
+.regimes{
+    padding-bottom: 4rem;
+}
+
+.two {
+    width: 50%;
+    margin-left: 50%;
+}
+
+
+.two h2 {
+    width: 60%;
+    margin: 0;
+}
+
+.contactos {
+    padding-left: 20%;
+}
+
+.contactos i{
+    font-size: 1.5rem;
+    padding-right: 1rem;
+}
+
+.contactos p{
+    font-size: 1.2rem;
+}
+
+.contactos a{
+    color: inherit;
+}
+
+.navbar-toggler {
+    margin-right: 4rem;
+}
+
+.navbar-collapse {
+    margin-left: 2rem;
+}
+
+.header-icon {
+    margin-top: 20rem;
+}
+
+footer{
+    text-align: center;
+    padding-top: 4rem;
+}
+
+footer a {
+    color: inherit;
+}
+
+@media screen and (max-width: 600px) {
+    .one {
+        float: none;
+    }
+    .two {
+        padding: 2rem 0 0 0;
+        margin-left: 0;
+    }
+
+    .header-icon {
+        margin-top: 15rem;
+    }
+
+    .container {
+        margin: 2rem 3rem 2rem 3%;
+    }
+
+    #blockrandom{
+        width: 90%;
+        height: 400px;
+    }
 }
