--- a/resources/css/atletas.css
+++ b/resources/css/atletas.css
@@ -16,3 +16,11 @@
     transform: scale(1.02);
 }
 
+footer{
+    text-align: center;
+    padding-top: 4rem;
+}
+
+footer a {
+    color: inherit;
+}
